--- a/.travis.yml
+++ b/.travis.yml
@@ -4,22 +4,35 @@ services:
   - docker
 
 before_install:
-  - docker build -t juandaston/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -f ./client/Dockerfile.dev -t client-test ./client
 
 script:
-  - docker run -e CI=true juandaston/react-test npm test
+  - docker run -e CI=true client-test npm test
 
 after_success:
-  - docker build -t juandaston/client ./client
-  - docker build -t juandaston/nginx ./nginx
-  - docker build -t juandaston/server ./server
-  - docker build -t juandaston/worker ./worker
+  - docker build -t danielb/client ./client
+  - docker build -t danielb/nginx ./nginx
+  - docker build -t danielb/server ./server
+  - docker build -t danielb/worker ./worker
 
   # Log in to the docker CLIE
   - echo "$DOCKER_PASSWORD_NEA" | docker login -u "$DOCKER_ID_NEA" --password-stdin
 
   # Take those images and push them to docker hub
-  - docker push juandaston/client
-  - docker push juandaston/nginx
-  - docker push juandaston/server
-  - docker push juandaston/worker
+  - docker push danielb/client
+  - docker push danielb/nginx
+  - docker push danielb/server
+  - docker push danielb/worker
+
+  deploy:
+    edge: true
+    provider: elasticbeanstalk
+    region: "us-east-2"
+    app: "multi-docker"
+    env: "MultiDocker-env-1"
+    bucket_name: "elasticbeanstalk-us-east-2-774154012305"
+    bucket_path: "danielb-docker-multi"
+    on:
+        - branch: master
+    access_key_id: $AWS_ACCESS_KEY_NEA
+    secret_access_key: $AWS_SECRET_KEY_NEA
