--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
             - ./server:/app
         environment:
             - REDIS_HOST=redis
-            - REDIS+PORT=6379
+            - REDIS_PORT=6379
             - PGUSER=postgres
             - PGHOST=postgres
             - PGDATABASE=postgres
