--- a/.travis.yml
+++ b/.travis.yml
@@ -34,5 +34,5 @@ deploy:
   bucket_path: danielb-docker-multi
   on:
       - branch: master
-  access_key_id: $AWS_SECRET_KEY_NEA2
+  access_key_id: $AWS_ACCESS_KEY_NEA2
   secret_access_key: $AWS_SECRET_KEY_NEA2
